[tool.poetry]
name = "god-of-war-bot"
version = "0.1.0"
description = "A discord based rpg game"
authors = ["Dániel Csatári <dankindarts@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
discord = "^1.0.1"
replit = "^2.0.0"
flask = "^1.1.2"
tinydb = "^4.4.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
